--- a/search-results.html
+++ b/search-results.html
@@ -61,16 +61,12 @@
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <input
-              id="search-bar"
-              class="form-control mr-sm-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-              Search
-            </button>
+            <div class="input-group mb-4 border rounded-pill p-1">
+              <input id="search-bar" type="search" placeholder="Search" aria-describedby="button-addon3" class="form-control bg-none border-0">
+              <div class="input-group-append border-0">
+                <button id="button-addon3" type="button" class="btn btn-link text-success"><i class="fa fa-search"></i></button>
+              </div>
+            </div>
           </form>
 
         </div>
