--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/frontPageStyle.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+    <!-- javascript -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="assets/javascript/app.js0"></script>
 
 </head>
 
@@ -22,15 +31,26 @@
         AOS.init();
     </script>
 
+    <!-- Search page -->
+
+    <!-- background video -->
+    <video autoplay muted loop id="myVideo">
+        <source src="assets/181015_Extra_DanangDrone_004.mp4" type="video/mp4">
+    </video>
+
+    <!-- header and subheader -->
+    <div id="rost">
+        <h1 id="rs">ROST</h1>
+        <p id="ss">Stocks Simplified.</p>
+    </div>
+
+    <!-- search button -->
+    <form action="">
+        <input type="search" id=bigSearchButton>
+        <i class="fa fa-search"></i>
+    </form>
+
 
 </body>
-
-
-<!-- javascript -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="assets/javascript/app.js0"></script>
 
 </html>
