--- a/index.html
+++ b/index.html
@@ -31,12 +31,11 @@
         AOS.init();
     </script>
 
-<<<<<<< HEAD
     <!-- Search page -->
 
     <!-- background video -->
     <video autoplay muted loop id="myVideo">
-        <source src="assets/181015_Extra_DanangDrone_004.mp4" type="video/mp4">
+        <source src="assets/Drone.mp4" type="video/mp4">
     </video>
 
     <!-- header and subheader -->
@@ -44,10 +43,6 @@
         <h1 id="rs">ROST</h1>
         <p id="ss">Stocks Simplified.</p>
     </div>
-=======
-<h1></h1>
-</body>
->>>>>>> 02a037ea5c3d03f4c17f07423c8b74d14c0b51ff
 
     <!-- search button -->
     <form action="">
