more logic, added ids

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!-- javascript -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+
 </head>
 
 
@@ -21,16 +25,15 @@
     <script>
         AOS.init();
     </script>
-
-
+    
+        <canvas id="stock-graph"style="max-height: 400px; max-width:400px;"></canvas>
+        
 </body>
 
 
 <!-- javascript -->
-<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="assets/javascript/app.js0"></script>
+<script src="assets/javascript/app.js"></script>
 
 </html>
