--- a/index.html
+++ b/index.html
@@ -13,23 +13,20 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/frontPageStyle.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+        integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
     <!-- javascript -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="assets/javascript/app.js0"></script>
-
-    <!-- javascript -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+
 
 </head>
 
 
-<body>
+<body class="frontpage">
 
     <script>
         AOS.init();
@@ -40,7 +37,7 @@
 
     <!-- background video -->
     <video autoplay muted loop id="myVideo">
-        <source src="assets/Drone.mp4" type="video/mp4">
+        <source src="assets/Abstract - 12902.mp4" type="video/mp4">
     </video>
 
     <!-- header and subheader -->
@@ -52,8 +49,8 @@
 
     <!-- search button -->
     <form action="">
-        <input type="search" id=bigSearchButton>
-        <i class="fa fa-search"></i>
+        <input type="search" id="big-search-bar">
+        <button><i class="fa fa-search" id=big-search-button></i></button>
     </form>
 
 
