potential final product

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>R.O.S.T</title>
+    <title>ROST</title>
 
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -37,20 +37,22 @@
 
     <!-- background video -->
     <video autoplay muted loop id="myVideo">
-        <source src="assets/Abstract - 12902.mp4" type="video/mp4">
+        <source src="assets/videos/video.mp4" type="video/mp4">
     </video>
 
     <!-- header and subheader -->
     <div id="rost">
-        <h1 id="rs">ROST</h1>
-        <p id="ss">Stocks Simplified.</p>
+        <div data-aos="fade-down" data-aos-duration="1000">
+            <h1 id="rs">ROST</h1>
+            <p id="ss">Stocks Simplified.</p>
+        </div>
     </div>
 
 
     <!-- search button -->
     <form action="">
         <input type="search" id="big-search-bar">
-        <button><i class="fa fa-search" id=big-search-button></i></button>
+        <i class="fa fa-search" id=big-search-button></i>
     </form>
 
 
