--- a/search-results.html
+++ b/search-results.html
@@ -177,7 +177,7 @@
     crossorigin="anonymous"
   ></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="assets/javascript/app.js0"></script>
+  <script src="assets/javascript/app.js"></script>
 
   <!-- jQuery For Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
