--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- background video -->
     <video autoplay muted loop id="myVideo">
 
-        <source src="assets/videos/video.mp4" type="video/mp4">
+        <source src="assets/videos/video.mp4">
 
     </video>
 
