--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     <!-- Search page -->
 
     <!-- background video -->
+    
     <video autoplay muted loop id="myVideo">
 
-        <source src="assets/videos/video.mp4" type="video/mp4">
+        <source src="assets/videos/video.mp4">
 
     </video>
 
