--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     
     <video autoplay muted loop id="myVideo">
 
-        <source src="assets/videos/video.mp4">
+        <source src="assets/videos/video.mp4" type="video/mp4">
 
     </video>
 
