--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Search page -->
 
     <!-- background video -->
-    <video autoplay muted loop id="myVideo">
+    <video autoplay muted  id="myVideo">
         <source src="assets/video.mp4" type="video/mp4">
     </video>
 
