testing video on gtihub pages

--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
     <script>
         AOS.init();
     </script>
-<div class="bg-image"></div>
+<!-- <div class="bg-image"></div> -->
 
     <!-- Search page -->
 
     <!-- background video -->
     
-    <video autoplay muted loop id="myVideo">
+    <video autoplay muted id="myVideo">
 
         <source src="assets/videos/video.mp4" type="video/mp4">
 
