--- a/index.html
+++ b/index.html
@@ -28,13 +28,16 @@
     <script>
         AOS.init();
     </script>
+<!-- <div class="bg-image"></div> -->
+
     <!-- Search page -->
 
     <!-- background video -->
 
 
-    <video autoplay muted id="myVideo">
+    <video autoplay muted  id="myVideo">
         <source src="assets/videos/video.mp4" type="video/mp4">
+
     </video>
 
     <!-- header and subheader -->
