--- a/index.html
+++ b/index.html
@@ -28,15 +28,14 @@
     <script>
         AOS.init();
     </script>
-<!-- <div class="bg-image"></div> -->
+<div class="bg-image"></div>
 
     <!-- Search page -->
 
     <!-- background video -->
 
-
     <video autoplay muted  id="myVideo">
-        <source src="assets/videos/video.mp4" type="video/mp4">
+        <source src="assets/video.mp4" type="video/mp4">
 
     </video>
 
