temp replacement for video

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 
     <!-- background video -->
 
-    <video autoplay muted  id="myVideo">
-        <source src="assets/video.mp4" type="video/mp4">
 
-    </video>
+    <div class="bg-image"></div>
+    <!-- <video autoplay muted  id="myVideo">
+        <source src="assets/video.mp4" type="video/mp4">
+    </video> -->
 
     <!-- header and subheader -->
     <div id="rost">
